tests/cases/compiler-development/artifact/errors/diagnostic-private-nested-module.diagnostic
diagnostic error code=M0001 family=module message="module 'Outer::Inner' is not public" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/modules/errors/private-nested-module.ari" display="tests/cases/modules/errors/private-nested-module.ari" bytes=201
  Label index=0 role=primary source_id=0 source="tests/cases/modules/errors/private-nested-module.ari" line=14 column=10 end_line=14 end_column=15 byte_start=176 byte_end=181 message=""
  Snippet label=0 text="  --> tests/cases/modules/errors/private-nested-module.ari:14:10\n    |\n 14 |   return Outer::Inner::value();\n    |          ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/modules/errors/private-nested-module.ari" line=2 column=7 end_line=2 end_column=12 byte_start=18 byte_end=23 message="private module 'Outer::Inner' declared here"
  Snippet label=1 text="  --> tests/cases/modules/errors/private-nested-module.ari:2:7\n   |\n 2 |   mod Inner {\n   |       ^^^^^"
  Note index=0 location=none message="module visibility is enforced at the use site and the private declaration is shown as a secondary label"
  Help index=0 location=none message="mark module 'Outer::Inner' as pub or access it from inside module 'Outer'"
